--- a/css/css.css
+++ b/css/css.css
@@ -15,7 +15,7 @@ aside{
 }
 
 
-        // zoom 
+ /************************ zoom **********************/ 
 .ol-zoom{
     top: .5em;
     left: .5em;
@@ -39,4 +39,20 @@ aside{
 
 .resTemplate{
     display: none;
+}
+
+/****************************** Responsive *********************************/
+@media screen and (max-width: 41em){
+    aside{
+    
+    font-family: icomoon;
+    content: "\e9bf";
+
+}
+#map{
+    display: block;
+    width: 100%;
+    float:left;
+    position: relative;
+}
 }
