--- a/css/css.css
+++ b/css/css.css
@@ -18,23 +18,27 @@
 aside{
     float:left;
     width:30%;
-    height: 100%;
+    height: 85%;
     position: relative;
 }
 
 
 header > img{
-    height: 100px;
-    width: 80px;
-    padding-bottom: 2em;
-    
-    
+    height: 15%;
+    width: 45%;
+    padding-bottom: 1em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+      
 }
+
 #map{
     display: block;
     width: 70%;
     float:right;
     position: relative;
+    height: 85%;
 }
 
 
@@ -93,4 +97,14 @@ header > img{
         float:right;
         position: relative;
     }
+    
+    header > img{
+    height: 10%;
+    width: 50%;
+    padding-bottom: 1em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+      
+}
 }
