--- a/css/css.css
+++ b/css/css.css
@@ -12,7 +12,7 @@
 
 /*************************** Style global *********************/
 * {
-    font-family: 'arial', sans-serif;
+    font-family: 'futura', sans-serif;
 }
 
 aside{
@@ -22,10 +22,12 @@ aside{
     position: relative;
 }
 
-
+.RechercheCabanes{
+    margin-bottom: 15px;
+}
 
 header > img{
-    height: 15%;
+    height: 18%;
     width: 45%;
     padding-bottom: 1em;
     display: block;
@@ -34,12 +36,22 @@ header > img{
 
 }
 
+.place{
+    text-decoration: none;
+    color: #562703;
+    line-height: 30px;
+}
+
+.place:hover{
+    color: #d98647;
+}
+
 #map{
     display: block;
     width: 70%;
     float:right;
     position: relative;
-    height: 85%;
+    height: 82%;
 }
 
 
