--- a/css/css.css
+++ b/css/css.css
@@ -13,45 +13,77 @@
 /*************************** Style global *********************/
 * {
     font-family: 'futura', sans-serif;
+    box-sizing: border-box;
+}
+body,html{
+  height: 100%;
+  padding:0;
+  margin:0;
 }
 
 aside{
     float:left;
     width:30%;
-    height: 85%;
-    position: relative;
+    padding: 0 0.5%;
 }
 
 .RechercheCabanes{
     margin-bottom: 15px;
 }
-
-header > img{
-    height: 18%;
-    width: 45%;
-    padding-bottom: 1em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-
+.RechercheCabanes input{
+  font-size: 18px;
+  width:100%;
+  height: 50px;
+  margin-bottom: 12px;
+}
+.RechercheCabanes button{
+  height: 50px;
+  font-size: 18px;
+  margin:0;
+  padding:0;
+  width: 100%;
 }
 
+header{
+  height:8%;
+  padding:0.5% 0;
+  text-align: center;
+}
+header img{
+    height:85%;
+    width: auto;
+    margin: 0 auto;
+}
+section.content{
+  height:90%;
+}
+.results .result, .hutResults .result{
+  height: 50px;
+}
+.results div:nth-child(even){
+  background: #ccc;
+}
 .place{
+    display: block;
+    height: 100%;
+    padding: 0 2%;
     text-decoration: none;
     color: #562703;
-    line-height: 30px;
+    line-height: 50px;
 }
 
 .place:hover{
     color: #d98647;
 }
+.place.current{
+  color:#37bf21;
+}
 
 #map{
     display: block;
     width: 70%;
-    float:right;
-    position: relative;
-    height: 82%;
+    height: 100%;
+    float:left;
 }
 
 
@@ -158,13 +190,4 @@ header > img{
       width:50%;
     }
 
-    header > img{
-    height: 10%;
-    width: 50%;
-    padding-bottom: 1em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-
-}
 }
